--- a/style.css
+++ b/style.css
@@ -4,11 +4,59 @@
   box-sizing: border-box;
 }
 
+body { 
+  font-family: "PT Sans", sans-serif;
+}
+
 header {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
+#menu {
+  width: 35px;
+  height: 30px;
+  margin: 30px 0 20px 20px;
+  cursor: pointer;
+  position: absolute;
+  top: 0!important;
+  left: 0!important;
+  z-index: 1;
+}
+
+.bar {
+  height: 2.5px;
+  width: 100%;
+  background-color: white;
+  display: block;
+  transition: 0.3s ease;
+}
+
+#bar1 {
+  transform: translateY(-4px);
+}
+
+#bar3 {
+  transform: translateY(4px);
+}
+
+.change .bar {
+  /* background-color: tomato; */
+
+  /* transform: rotatez(180deg); */
+  
+}
+.change #bar1 {
+  transform: translateY(10px) rotatez(180deg);
+}
+.change #bar2 {
+  transform: rotatez(180deg);
+}
+.change #bar3 {
+  transform: translateY(-10px) rotatez(180deg);
+}
+
 .rgbKineticSlider {
   display: block;
   position: relative;
@@ -28,7 +76,7 @@ header {
 .title {
   color: white;
 }
-.hero-text {
+.slider-container {
   color: white;
   font-weight: larger;
   /* margin-top: -100px; */
