--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body { 
   font-family: "PT Sans", sans-serif;
+  background-color: black;
 }
 
 header {
@@ -34,19 +35,72 @@ header {
 }
 
 #bar1 {
-  transform: translateY(-4px);
+  transform: translateY(-8px);
 }
 
 #bar3 {
-  transform: translateY(4px);
+  transform: translateY(8px);
 }
 
-.change .bar {
-  /* background-color: tomato; */
-
-  /* transform: rotatez(180deg); */
-  
+.nav-title {
+  color: white;
+  z-index: 1;
+  position: absolute;
+  left: 65px;
+  top: 15px
 }
+.nav {
+
+  /* background-color: violet; */
+  margin: 30px 0 20px 20px;
+  cursor: pointer;
+  position: absolute;
+  top: 30px!important;
+  left: 0px!important;
+  z-index: 1;
+  transition: 0.5s ease;
+  display: none;
+}
+.nav li a {
+  color: white;
+  text-decoration: none;
+}
+.nav li a:hover {
+  font-weight: bold;
+}
+
+.nav li {
+  list-style: none;
+  padding: 5px 0;
+}
+
+.menu-bg, #menu-bar{
+  top:0;
+  left: 0;
+  position: absolute;
+}
+
+
+.menu-bg {
+  z-index: 1;
+  width: 0;
+  height: 0;
+  margin: 30px 0 20px 20px;
+  background-color: none;
+  background: radial-gradient(circle, purple, black);
+  border-radius: 50%;
+  transition: 0.3s ease;
+}
+#menu-bar {
+  z-index: 2;
+}
+
+.change-bg {
+  width: 300px;
+  height: 300px;
+  transform: translate(-25%, -25%);
+}
+
 .change #bar1 {
   transform: translateY(10px) rotatez(180deg);
 }
@@ -55,6 +109,9 @@ header {
 }
 .change #bar3 {
   transform: translateY(-10px) rotatez(180deg);
+}
+.change {
+  display: block;
 }
 
 .rgbKineticSlider {
