--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
   width: 35px;
   height: 30px;
   margin: 30px 0 20px 20px;
-  cursor: pointer;
+  /* cursor: pointer; */
   position: absolute;
   top: 0!important;
   left: 0!important;
@@ -53,7 +53,7 @@ header {
 
   /* background-color: violet; */
   margin: 30px 0 20px 20px;
-  cursor: pointer;
+  /* cursor: pointer; */
   position: absolute;
   top: 30px!important;
   left: 0px!important;
