--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+:root {
+  --red: #D34848;
+}
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+:root {
+  --main-bg-color: brown;
 }
 
 body { 
@@ -119,7 +126,7 @@ header {
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 600px;
+  height: 630px;
 }
 
 .rgbKineticSlider canvas {
@@ -171,7 +178,7 @@ nav a.prev {
 }
 
 .red-box {
-  background-color: #D34848;
+  background-color: var(--red);
   height: 600px;
   width: 100%
 }
