--- a/menu-black.css
+++ b/menu-black.css
@@ -4,9 +4,9 @@
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 1830px!important;
+  top: 1845px!important;
   left: 0!important;
-  z-index: 1;
+  z-index: 7;
 }
 
 
@@ -29,8 +29,8 @@
   color: white;
   position: absolute;
   left: 65px;
-  top: 1845px;
-  z-index: 1
+  top: 1860px;
+  z-index: 7
 }
 
 .nav-black {
@@ -39,9 +39,9 @@
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 1860px!important;
+  top: 1880px!important;
   left: 0px!important;
-  z-index: 1;
+  z-index: 7;
   transition: 0.5s ease;
   display: none;
 }
@@ -60,25 +60,28 @@
 }
 
 .menu-bg-black, #menu-bar-black{
-  top: 1800px;
+  /* top: 1800px; */
   left: 0;
+  
   /* position: absolute; */
 }
 
 .menu-bg-black {
+  top: 1860px!important;
   position: absolute;
-  z-index: 0;
+  z-index: 6;
   width: 0;
   height: 0;
   margin: 0 0 0 20px;
   background-color: var(--cyan);
-  background: circle;
+  background: circle ;
   border-radius: 50%;
   transition: 0.3s ease;
 }
 
 #menu-bar-black {
-  z-index: 2;
+  /* position: absolute; */
+  z-index: 5;
 }
 
 .change-bg-black {
@@ -89,12 +92,12 @@
 
 .change-black .bar-black  {
   /* color: var(--black) */
-  /* background-color: var(--black); */
+  background-color: var(--black);
  
 }
 
 .change-nav-title-black {
-  /* color: var(--black); */
+  color: var(--black);
 }
 
 .change-black #bar1-black {
