--- a/menu-black2.css
+++ b/menu-black2.css
@@ -1,16 +1,16 @@
-#menu-yellow {
+#menu-black2 {
   width: 35px;
   height: 30px;
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 0!important;
+  top: 2830px!important;
   left: 0!important;
-  z-index: 10;
+  z-index: 1;
 }
 
 
-.bar-yellow {
+.bar-black2 {
   height: 2.5px;
   width: 100%;
   background-color: white;
@@ -18,94 +18,95 @@
   transition: 0.3s ease;
 }
 
-#bar1-yellow {
+#bar1-black2 {
   transform: translateY(-8px);
 }
 
-#bar3-yellow {
+#bar3-black2 {
   transform: translateY(8px);
 }
-.nav-title-yellow {
+.nav-title-black2 {
   color: white;
   position: absolute;
   left: 65px;
-  top: 15px;
-  z-index: 10;
+  top: 2845px;
+  z-index: 1
 }
 
-.nav-yellow {
+.nav-black2 {
 
   /* background-color: violet; */
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 50px!important;
+  top: 2860px!important;
   left: 0px!important;
-  z-index: 10;
+  z-index: 1;
   transition: 0.5s ease;
   display: none;
 }
-.nav-yellow li a {
+.nav-black2 li a {
   color: white;
   text-decoration: none;
 }
-.nav-yellow li a:hover {
+.nav-black2 li a:hover {
   font-weight: bold;
-  color: var(--yellow)
+  color: var(--black)
 }
 
-.nav-yellow li {
+.nav-black2 li {
   list-style: none;
   padding: 5px 0;
 }
 
-.menu-bg-yellow, #menu-bar-yellow{
-  /* top: 1200px; */
+.menu-bg-black2, #menu-bar-black2{
+  top: 2800px;
   left: 0;
   /* position: absolute; */
 }
 
-.menu-bg-yellow {
+.menu-bg-black2 {
   position: absolute;
-  z-index: 9;
+  z-index: 0;
   width: 0;
   height: 0;
   margin: 0 0 0 20px;
-  background-color: var(--black);
-  /* background: circle; */
+  background-color: var(--cyan);
+  background: circle;
   border-radius: 50%;
   transition: 0.3s ease;
 }
 
-#menu-bar-yellow {
-  z-index: 8;
+#menu-bar-black2 {
+  /* position: unset; */
+  z-index: 2;
 }
 
-.change-bg-yellow {
+.change-bg-black2 {
   width: 300px;
   height: 300px;
   transform: translate(-25%, -25%);
 }
 
-.change-yellow .bar-yellow  {
-  /* color: var(--yellow) */
-  background-color: var(--yellow);
+.change-black2 .bar-black2  {
+  /* color: var(--black) */
+  /* background-color: var(--black); */
  
 }
 
-.change-nav-title-yellow {
-  color: var(--yellow);
+.change-nav-title-black2 {
+  /* color: var(--black); */
 }
 
-.change-yellow #bar1-yellow {
+.change-black2 #bar1-black2 {
   transform: translateY(10px) rotatez(180deg);
 }
-.change-yellow #bar2-yellow {
+.change-black2 #bar2-black2 {
   transform: rotatez(180deg);
 }
-.change-yellow #bar3-yellow {
+.change-black2 #bar3-black2 {
   transform: translateY(-10px) rotatez(180deg);
 }
-.change-yellow {
+.change-black2 {
   display: block;
 }
