--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header {
   width: 35px;
   height: 30px;
   margin: 30px 0 20px 20px;
-  /* cursor: pointer; */
+  cursor: pointer;
   position: absolute;
   top: 0!important;
   left: 0!important;
@@ -77,6 +77,7 @@ header {
 }
 .nav li a:hover {
   font-weight: bold;
+  color: var(--black);
 }
 
 .nav li {
@@ -95,9 +96,8 @@ header {
   z-index: 1;
   width: 0;
   height: 0;
-  margin: 30px 0 20px 20px;
-  background-color: none;
-  background: radial-gradient(circle, purple, black);
+  margin: 0 0 0 20px;
+  background-color: var(--cyan);
   border-radius: 50%;
   transition: 0.3s ease;
 }
@@ -111,6 +111,9 @@ header {
   transform: translate(-25%, -25%);
 }
 
+.change .bar {
+  background-color: var(--black);
+}
 .change #bar1 {
   transform: translateY(10px) rotatez(180deg);
 }
