--- a/menu-red.css
+++ b/menu-red.css
@@ -66,7 +66,7 @@
 }
 
 .menu-bg-red {
-  position: unset;
+  position: absolute;
   z-index: 12;
   width: 0;
   height: 0;
@@ -75,6 +75,7 @@
   background: circle;
   border-radius: 50%;
   transition: 0.3s ease;
+
 }
 
 #menu-bar-red {
