got the right buttons on the top corner

--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ background-color: none;
   color: white;
 }
 
-.yellow-right-side .btn-mix-noborder {
+.uppercorner {
   top: 0;
   right: 0;
   position: absolute;
