--- a/menu-black.css
+++ b/menu-black.css
@@ -4,7 +4,7 @@
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 1845px!important;
+  /* top: 1845px!important; */
   left: 0!important;
   z-index: 7;
 }
@@ -29,7 +29,7 @@
   color: white;
   position: absolute;
   left: 65px;
-  top: 1860px;
+  top: 15px;
   z-index: 7
 }
 
@@ -39,7 +39,7 @@
   margin: 30px 0 20px 20px;
   cursor: pointer;
   position: absolute;
-  top: 1880px!important;
+  top: 40px!important;
   left: 0px!important;
   z-index: 7;
   transition: 0.5s ease;
@@ -67,7 +67,7 @@
 }
 
 .menu-bg-black {
-  top: 1860px!important;
+  /* top: 1860px!important; */
   position: absolute;
   z-index: 6;
   width: 0;
