--- a/style.css
+++ b/style.css
@@ -337,7 +337,9 @@ background-color: none;
   color: white;
 }
 
-.uppercorner {
+
+
+.top-right-button button {
   top: 0;
   right: 0;
   position: absolute;
@@ -359,6 +361,84 @@ background-color: none;
   position: relative;
   z-index: 5;
 }
+
+.black-box-content {
+  position: relative;
+  /* overflow: hidden; */
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+ .button-div {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+}
+.black-box-content h1 {
+  color: white;
+  left: 5.5em;
+  top: 4em;
+  position: absolute;
+
+}
+
+.black-box-info section h2 {
+  margin-top: 2em;
+}
+.black-box-info section p {
+  margin-top: 2em;
+  color: white;
+}
+
+.red-left-side h2 {
+  color: var(--red);
+}
+
+.cyan-center-side h2 {
+  color: var(--cyan)
+}
+
+.yellow-text-right-side h2 {
+  color: var(--yellow);
+}
+
+.black-box-info section .line {
+  border-bottom: lightblue;
+  background-color: lightcoral;
+  height: 2px;
+  width: 25px;
+
+}
+
+.black-box-info {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.black-box-info section {
+  display: flex;
+  flex-direction: column;
+  width: 15%;
+}
+
+.red-left-side {
+
+}
+
+.cyan-center-side {
+}
+
+.black-box-info .yellow-text-right-side{
+}
+ 
 .skyblue-box {
   background-color: var(--cyan);
   height: 400px;
