--- a/pricing-styles.css
+++ b/pricing-styles.css
@@ -37,6 +37,32 @@
   margin-bottom: 5px;
   margin-top: 5px;
 }
+.center {
+  color: var(--yellow);
+}
+.pricing-line-center {
+  height: 2px;
+  width: 75px;
+  /* position: absolute; */
+  /* top: 13em; */
+  background-color: var(--yellow);
+  z-index: 5;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.right{
+  color: var(--cyan);
+}
+.pricing-line-right {
+  height: 2px;
+  width: 75px;
+  /* position: absolute; */
+  /* top: 13em; */
+  background-color: var(--cyan);
+  z-index: 5;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
 .pricing-details {
   display: flex;
   margin: 5px 0 5px 0;
@@ -50,6 +76,24 @@
   height: 50px;
   border-radius: 50px;
   background-color: var(--red);
+  color: white;
+  border: none;
+}
+
+.pricing-select-button-center {
+  width: 200px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: var(--yellow);
+  color: white;
+  border: none;
+}
+
+.pricing-select-button-right {
+  width: 200px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: var(--cyan);
   color: white;
   border: none;
 }
