--- a/payments.css
+++ b/payments.css
@@ -17,7 +17,10 @@ body {
   width: 100%;
   align-items: flex-start;
   justify-content: center;
-  padding: 7em;
+  padding-left: 7em;
+}
+.plan-selection {
+  margin: 1em;
 }
 .select-basic {
   color: var(--red)
@@ -27,4 +30,57 @@ body {
 }
 .select-pro {
   color: var(--cyan)
+}
+.billing-and-credit-info {
+  display: flex;
+  width: 100%;
+  /* height: 240px; */
+}
+.billing-info, .credit-info {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 2em;
+}
+.billing-info, .credit-info{
+  text-transform: uppercase;
+}
+.billing-info h2, .credit-info h2{
+  margin-left: -1.2em;
+}
+.city-postal-code, .month-year {
+  display: flex;
+  font-size: .6em;
+  width: 100%;
+}
+.city, .postal-code, .month, .year {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.city, .month {
+  padding-right: 1em;
+}
+.terms {
+  width: 50%;
+}
+
+form .button-div {
+  position: relative;
+
+}
+.terms {
+  margin-left: 2em;
+}
+.input-class {
+  height: 50px;
+  /* background-color: peru; */
+}
+/* .input-clas:focus {
+  background-color: peru;
+
+} */
+input:focus {
+  outline: none !important;
+  border-bottom: 4px solid var(--purple);
 }
