--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   --black: black;
   --cyan: #1FE1E9;
   --main-bg-color: brown;
+  --purple: #5E33D1;
 }
 * {
   padding: 0;
@@ -293,6 +294,14 @@ background-color: none;
   overflow: hidden;
   z-index: 16;
 }
+.mouse_area_wrap_red {
+  background-color: violet;
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  overflow: hidden;
+  /* z-index: 2000; */
+}
 
 .mouse_hover_area {
   width: 100%;
@@ -301,7 +310,28 @@ background-color: none;
   /* background-attachment: fixed; */
   z-index: 16;
 }
+
+.mouse_hover_area_red {
+  /* width: 1000px;
+  height: 200px; */
+  /* background-color: violet; */
+  /* background: url(./img/liveconcert2.jpg) left top no-repeat; */
+  /* background-attachment: fixed; */
+  z-index: 100;
+}
 .mouse {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: url(./img/liveconcert2.jpg);
+  background-attachment: fixed;
+  position: absolute;
+  left: 45%;
+  top: 45%;
+  /* border: 5px solid; */
+  z-index: -5;
+}
+.mouse_red {
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -591,7 +621,7 @@ background-color: none;
   }
 
 footer {
-  background-color: #5E33D1;
+  background-color: var(--purple);
   height: 300px;
   width: 100%;
   display: flex;
