added the click circle as a hover over the speakers effect and fixed basic styling

--- a/style.css
+++ b/style.css
@@ -202,8 +202,8 @@ background-color: none;
   height: 100%;
   display: flex;
   /* flex-direction: column; */
-  justify-content: center;
-  align-items: center;
+ 
+  /* align-items: center; */
   /* position: absolute; */
 }
 
@@ -245,8 +245,18 @@ background-color: none;
   display: flex;
   align-items: center;
   position: absolute;
-  bottom: 2em;
-  cursor: pointer;
+  /* bottom: 2em; */
+  /* cursor: pointer; */
+  /* z-index: 20; */
+  /* display: none; */
+  /* left: 45%;
+  top: 45% */
+}
+.left-speaker-container:hover .mouse_red {
+  display: block;
+}
+.right-speaker-container:hover .mouse_red {
+  display: block;
 }
 .yellow-box {
   height: 600px;
@@ -295,30 +305,32 @@ background-color: none;
   z-index: 16;
 }
 .mouse_area_wrap_red {
-  background-color: violet;
-  width: 100%;
-  height: 300px;
+  width: 50%;
+  height: 100%;
   position: absolute;
   overflow: hidden;
   /* z-index: 2000; */
+  right: 0;
+  
+  
 }
 
 .mouse_hover_area {
   width: 100%;
   height: 120%;
-  /* background: url(./img/liveconcert2.jpg) left top no-repeat; */
-  /* background-attachment: fixed; */
   z-index: 16;
 }
 
 .mouse_hover_area_red {
-  /* width: 1000px;
-  height: 200px; */
-  /* background-color: violet; */
-  /* background: url(./img/liveconcert2.jpg) left top no-repeat; */
-  /* background-attachment: fixed; */
+  width: 100px;
+  height: 300px;
   z-index: 100;
 }
+.mouse_hover_area_red .speaker{
+  position: absolute;
+
+}
+
 .mouse {
   width: 200px;
   height: 200px;
@@ -330,18 +342,20 @@ background-color: none;
   top: 45%;
   /* border: 5px solid; */
   z-index: -5;
+  
 }
 .mouse_red {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background: url(./img/liveconcert2.jpg);
-  background-attachment: fixed;
+  /* width: 200px; */
+  /* height: 200px; */
+  /* border-radius: 50%; */
+  /* background: url(./img/liveconcert2.jpg); */
+  /* background-attachment: fixed; */
   position: absolute;
-  left: 45%;
-  top: 45%;
+  /* margin: 0 1em 1em 0; */
+  /* top: 45%; */
   /* border: 5px solid; */
-  z-index: -5;
+  /* z-index: -5; */
+  display: none;
 }
 .yellow-left-side {
   /* background-color: violet; */
@@ -468,6 +482,14 @@ background-color: none;
 .black-box-info section p {
   margin-top: 2em;
   color: white;
+}
+.red-text {
+  top: 45%;
+    flex-direction: column;
+    left: 15%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
 }
 
 .red-left-side h2 {
