fixed the styling of the white buttons without the animation

--- a/gradient-button.css
+++ b/gradient-button.css
@@ -19,7 +19,7 @@
     position: absolute;
   }
   .btn-mix-noborder:hover, :focus {
-    /* background: rgba(255, 255, 255, 0.8); */
+    background: rgba(255, 255, 255, 0.8);
   }
 
 
