--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ background-color: none;
   right: 3%;
 }
 
-.yellow-right-side {
+.yellow-right-side, .yellow-right-side-outside {
   height: 100%;
   width: 60%;
   right: 0;
@@ -430,7 +430,15 @@ background-color: none;
   align-items: center;
   justify-content: center;
 }
+.yellow-right-side-outside {
+  /* top: -26px; */
+  z-index: -2;
+  display: none;
+}
 
+.yellow-right-side-outside:hover {
+  display:none;
+}
 .yellow-right-side h1{
   color: white;
 }
@@ -441,6 +449,14 @@ background-color: none;
   top: 0;
   right: 0;
   position: absolute;
+}
+.inside-glass {
+  color: pink;
+  display: block
+}
+.outside-glass {
+  /* color: blue; */
+  display: block;
 }
 .circle4 {
   height: 300px;
@@ -473,18 +489,18 @@ background-color: none;
   align-items: center;
   justify-content: center;
 }
-
+/* 
  .button-div {
   position: absolute;
   top: 0%;
   right: 0%;
   margin: 2em;
-  height: 50px;
-  width: 200px;
+  /* height: 50px; 
+  /* width: 200px; 
+  padding: 1.5em 3em;
   border-radius: 50px;
   overflow: hidden;
-  
-}
+} */
 .black-box-content h1 {
   color: white;
   left: 5.5em;
@@ -501,12 +517,27 @@ background-color: none;
   color: white;
 }
 .red-text {
-  top: 45%;
-    flex-direction: column;
-    left: 15%;
-    display: flex;
-    justify-content: center;
-    position: absolute;
+  display: flex;
+  flex-direction: column;
+  left: 15%;
+  justify-content: space-evenly;
+  position: absolute;
+  overflow: hidden;
+  height: 100%;
+  width: 80%;
+}
+.red-left-side {
+  display: flex;
+  overflow: hidden;
+  /* background-color: aliceblue; */
+  height: 100%;
+  width: 37%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.button-div {
+  /* background-color: blue; */
 }
 
 .red-left-side h2 {
