fixed boxes issue

--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ background-color: none;
   position: absolute;
 }
 .inside-glass {
-  color: pink;
+  color: white;
   display: block
 }
 .outside-glass {
