--- a/white-button.css
+++ b/white-button.css
@@ -35,7 +35,7 @@
   width: var(--size);
   height: var(--size);
   background: radial-gradient(circle closest-side,
-   var(--yellow), 
+   var(--cyan), 
    /* pink, */
    transparent);
   -webkit-transform: translate(-50%, -50%);
