--- a/payments.css
+++ b/payments.css
@@ -6,7 +6,7 @@
 body {
   background-color: white;
   width: 100%;
-  height: 100vh;
+  height: 900px;
 }
 
 .payments-section {
@@ -18,6 +18,9 @@ body {
   align-items: flex-start;
   justify-content: center;
   padding-left: 7em;
+}
+form {
+  /* margin: 3em */
 }
 .plan-selection {
   margin: 1em;
@@ -70,7 +73,8 @@ form .button-div {
 
 }
 .terms {
-  margin-left: 2em;
+  margin: 0 0 10em 2em;
+
 }
 .input-class {
   height: 50px;
@@ -86,5 +90,29 @@ input:focus {
 }
 
 .payments-section .btn-mix-noborder {
-  padding: 2.3em 3em !important;
+  bottom: -46px;
+  left: 149px;
+  padding: 1.3em 3em !important;
+  display: none;
+  margin: 0;
+  position: absolute;
+}
+
+button {
+  position: absolute;
+  bottom: -49px;
+  left: 11.5em;
+  padding: 0.8em 2.1em;
+    /* outline: 0; */
+    border-radius: 50px;
+    font-size: 0.8em;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    letter-spacing: 2px;
+    overflow: hidden;
+}
+
+button a{
+  text-decoration: none;
+  color: gray
 }
